samples/_failures_safe/1761667208_0638ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_379653d9.c: In function ‘main’:
./samples/SAFE/__tmp_379653d9.c:123:9: error: expected declaration or statement at end of input
  123 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_379653d9.c:123:9: error: expected declaration or statement at end of input
